Bug 201180, mozilla's AtkUtil implementation doesn't support atk_add_key_event_listener. r=kyle.  This is NOT for default build. It is a Gtk2 Accessibility patch.